タイムスタンプ検索用ページの更新
・インライン再生の自動再生の方法を変更
・ホバー時のインライン再生ボタンの色を変更
・インラインプレイヤーのサイズを整数に変更

--- a/style.css
+++ b/style.css
@@ -362,6 +362,10 @@ textarea:not([readonly]):focus + .underline .focused {
   opacity: 1;
 }
 
+.list-button[command="play"]:hover {
+  color: #40bf40;
+}
+
 .list-item:not([site="youtube"]) .list-button[command="play"] {
   display: none;
 }
